# ai-sentinel

./: .claude-cr-threads.json  .dockerignore  .gitattributes  .gitignore  BACKLOG-SONAR-UI.md  BACKLOG-SONAR-pii-detector-service.md  BACKLOG-SONAR.md  CONTRIBUTING.md  LICENSES-SOURCES.md  README.md  docker-compose-dgnsi.yml  docker-compose.dev.yml  docker-compose.yml  lessons.md  naming-audit-java.md  package-lock.json  renovate-local.ps1  renovate-local.sh  renovate.json
pii-detector-rust/: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs
pii-detector-rust/.cargo/: config.toml
pii-detector-rust/config/: nlpd-ipi.toml
pii-detector-rust/config/overrides/: example-tenant.toml  gliner2-aligned.toml  ner-only.toml
pii-detector-rust/proto/: pii_detection.proto
pii-detector-rust/src/: error.rs  findings.rs  grpc_server.rs  html_strip.rs  lib.rs  resolve.rs
pii-detector-rust/src/classification_layer/: README.md  mod.rs
pii-detector-rust/src/gliner2/: README.md  classification.rs  config.rs  input.rs  mod.rs  ner.rs  runtime.rs  sessions.rs  tokens.rs  types.rs  word_split.rs
pii-detector-rust/src/ner_layer/: README.md  mod.rs
pii-detector-rust/src/pipeline/: README.md  chunker.rs  mod.rs
pii-detector-rust/src/regex_layer/: README.md  mod.rs  validators.rs
pii-detector-rust/src/taxonomy/: README.md  loader.rs  mod.rs  overrides.rs  types.rs  validation.rs
pii-detector-rust/tests/: parity.rs  regex_layer_baseline.rs  taxonomy_baseline.rs
pii-detector-service/: .gitignore  .scratch_delete_lines.py  Dockerfile  README.md  pyproject.toml
pii-detector-service/benchmarks/: .gitignore  SCALING-CONCLUSIONS.md  analyze_recall.py  bench_scaling.py  compare_findings.py  compare_models_recall.py  corpus_sample.py  recall_from_it_backup.py  run_matrix.py  run_pf.py  seed_config_parser.py
pii-detector-service/config/: detection-settings.toml  llm-judge-prompts-per-type.toml  llm-judge-prompts.toml  test-fallback-pii-config.toml
pii-detector-service/config/models/: gliner2-pii.toml  regex-patterns.toml
pii-detector-service/doc/: licenses.md  pipdeptree.txt
pii-detector-service/experiments/: fastgliner_api_probe.py  fastgliner_concurrent_load_repro.py  fastgliner_detector_smoke.py  fastgliner_fork_safety_smoke.py  poc_gliner2_offsets.py  presidio_noise_filter_smoke.py
pii-detector-service/pii_detector/: README.md  server.py
pii-detector-service/pii_detector/application/: __init__.py
pii-detector-service/pii_detector/config/: __init__.py
pii-detector-service/pii_detector/domain/: __init__.py
pii-detector-service/scripts/: _analyze_missings.py  bench_pytorch_vs_onnx_fp32.py  bisect_pipeline_components.py  confluence-pii-test-document-docanno-light.txt  count_findings_doccano.py  diagnose_gliner_parity.py  experiment_openmed_privacy_filter.py  export_gliner2_to_monolithic_onnx.py  export_gliner_to_onnx.py  inspect_openmed_raw.py  parse_finding_tracker.py  parse_throughput_logs.py  probe_docanno_grpc.py  standalone_docling_gliner_scan.py  test_gemma_false_positive_filter.py  test_gemma_lmstudio_poc.py  test_pipeline_real_pdf.py
pii-detector-service/tests/integration/: _corpus_io.py  _debug_pipeline_simulation.py  test-piiranha.py  test_concurrency_autotune_e2e.py  test_database_config_integration.py  test_format_prefilter_benchmark.py  test_gliner2_fastgliner_fp_evaluation_with_judge.py  test_gliner2_pii_text_document_with_judge.py  test_gliner2_realistic_fp_evaluation_with_judge.py  test_gliner_chunking_strategies_benchmark.py  test_gliner_detector_chunking_recall.py  test_gliner_false_positive_benchmark.py  test_gliner_nvidia_parity.py  test_gliner_username_label_benchmark.py  test_integration_city_detection.py  test_integration_text_with_emails.py  test_llm_judge_multi_source_pipeline.py  test_llm_judge_per_type_pipeline.py  test_llm_judge_pipeline.py  test_llm_judge_prompt_comparison.py  test_llm_validation_pipeline.py  test_ministral_token_chunker_real.py  test_nvidia_gliner_access_token_label_benchmark.py  test_nvidia_gliner_account_id_label_benchmark.py  test_nvidia_gliner_all_remaining_labels_benchmark.py  test_nvidia_gliner_api_key_label_benchmark.py  test_nvidia_gliner_bic_swift_label_benchmark.py  test_nvidia_gliner_device_id_label_benchmark.py  test_nvidia_gliner_iban_label_benchmark.py  test_nvidia_gliner_password_label_benchmark.py  test_nvidia_gliner_session_id_label_benchmark.py  test_nvidia_gliner_username_label_benchmark.py  test_ondemand_benchmark_e2e.py  test_openmed_pii_text_document_with_judge.py  test_openmed_pipeline_benchmark.py  test_openmed_realistic_fp_evaluation.py  test_openmed_realistic_fp_evaluation_with_judge.py  test_openmed_smoke.py  test_pipeline_real_pdf.py  test_presidio_false_positive_benchmark.py  (+2 more)
pii-detector-service/tests/resources/: gliner-parity-baseline-confluence.json  gliner-parity-baseline.json  gliner-parity-baseline.txt  gliner2-pii-test-document.annotations.json  gliner2-pii-test-document.txt  openmed-benchmark-fixtures-password.md  openmed-benchmark-fixtures.md  openmed-pii-test-document.annotations.json  openmed-pii-test-document.txt
pii-detector-service/tests/unit/: conftest.py  test_composite_detector.py  test_composite_detector_regex_runtime_override.py  test_composite_detector_run_stats.py  test_composite_gliner2_wiring.py  test_composite_ministral_wiring.py  test_composite_openmed_wiring.py  test_concurrency_autotuner.py  test_database_config_adapter_concurrency.py  test_detector_factory.py  test_dual_metrics_prf1.py  test_gliner2_detector.py  test_gliner2_factory_routing.py  test_gliner2_model_manager.py  test_gliner_detector.py  test_gliner_detector_accuracy.py  test_ministral_concurrency.py  test_ministral_detector.py  test_model_manager.py  test_monitor_memory.py  test_openmed_detector.py  test_pii_service.py  test_pii_service_detector_specific_filtering.py  test_pii_service_detector_stats.py  test_pii_service_llm_judge.py  test_pii_service_postfilter.py  test_pii_service_prefilter.py  test_pii_service_unknown_label_filter.py  test_presidio_detector_accuracy.py  test_regex_detector.py  (+5 more)
(+1002 files in other folders)
