[package]
name = "ai-sentinel-pii-detector"
version = "0.1.0"
edition = "2024"

[dependencies]
ort = { version = "2.0.0-rc.10", features = ["ndarray"] }
tokenizers = "0.20"
ndarray = "0.17"
regex = "1"
scraper = "0.20"
ego-tree = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"

tonic = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tokio-stream = "0.1"
async-stream = "0.3"
clap = { version = "4", features = ["derive"] }

[build-dependencies]
tonic-build = "0.12"
protoc-bin-vendored = "3"

[dev-dependencies]
anyhow = "1"

[[bin]]
name = "grpc_server"
path = "src/bin/grpc_server.rs"
